# duckreg

./: .gitignore  LICENSE  README.md  _quarto.yml  bitpacked-mundlak.html  bitpacked-mundlak.qmd  compression.html  compression.qmd  debug.py  dml.html  dml.qmd  examples.html  examples.qmd  fisher-scoring.html  fisher-scoring.qmd  glm.html  glm.qmd  ibis.html  ibis.qmd  index.html  index.qmd  inference.html  inference.qmd  intro.ipynb  linear.html  linear.qmd  panel.html  panel.qmd  performance.html  performance.qmd  pyproject.toml  readme.md  requirements.txt  ridge.html  ridge.qmd  search.json  setup.py  styles.css
.github/workflows/: ci.yml  docs.yml
benchmarks/: bench.py  bitpacked_mundlak_poc.py  perf_summary.py  quick_bench.py
docs/: duckreg.html  index.html  search.js
docs/duckreg/: demean.html  duckreg.html  estimators.html
duckreg/: __init__.py  bitmap_utils.py  bitpacking.py  dbreg.py  demean.py  duckreg.py  estimators.py  pyvenv.cfg  regularized.py  stream.py
notebooks/: bitpacked_mundlak_coverage_R1000_N10000_B200.csv  bitpacked_mundlak_poc.html  bitpacked_mundlak_poc.qmd  compressed_dml_draft.md  duckdml.ipynb  event_study.ipynb  glm.ipynb  introduction.ipynb  regularized.ipynb  streaming_demo.ipynb  test_dml_coverage.py  variance_estimation.md
site_libs/bootstrap/: bootstrap.min.css
tests/: conftest.py  test_api.py  test_bitpacking.py  test_dbreg.py  test_dbreg_glm_event.py  test_dbreg_numerical_equivalence.py  test_dml.py  test_dml_analytic.py  test_fitter.py  test_glm.py  test_stream.py  test_vs_pyfixest.py  utils.py
