[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckreg"
version = "0.4.1"
description = "Compressed regression estimators for Ibis-compatible database backends"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Apoorva Lal", email = "lal.apoorva@gmail.com" },
]
keywords = ["statistics", "econometrics", "sufficient statistics", "bootstrap"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy",
  "pandas",
  "tqdm",
  "ibis-framework[duckdb]",
]

[project.optional-dependencies]
databricks = ["ibis-framework[databricks]"]
duckdb = ["ibis-framework[duckdb]"]
postgres = ["ibis-framework[postgres]"]
snowflake = ["ibis-framework[snowflake]"]
test = ["pytest", "pyfixest", "scipy"]

[project.urls]
Homepage = "https://github.com/py-econometrics/duckreg"
Repository = "https://github.com/py-econometrics/duckreg"

[tool.setuptools.packages.find]
include = ["duckreg", "duckreg.*"]
exclude = ["tests", "tests.*"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.9",
    "pyfixest>=0.50.1",
]
